--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,37 +2,34 @@
 version: '2'
 services:
   zookeeper:
-    image: confluentinc/cp-zookeeper
-    hostname: zookeeper
-    ports:
-      - "2181:2181"
+    image: confluentinc/cp-zookeeper:latest
+    network_mode: host
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
+    extra_hosts:
+      - "moby:127.0.0.1"
 
   kafka:
-    image: confluentinc/cp-kafka
-    hostname: kafka
+    image: confluentinc/cp-kafka:latest
+    network_mode: host
     depends_on:
       - zookeeper
-    ports:
-      - "9092:9092"
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_ZOOKEEPER_CONNECT: localhost:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-
+    extra_hosts:
+      - "moby:127.0.0.1"
+      
   schema_registry:
-    image: confluentinc/cp-schema-registry
-    hostname: schema_registry
+    image: confluentinc/cp-schema-registry:latest
+    network_mode: host
     depends_on:
       - zookeeper
       - kafka
-    ports:
-      - "8081:8081"
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema_registry
-      SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:2181'
-
+      SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'localhost:2181'
       
